# Aconity_ML_Expt1

./: LICENSE  act_plot.ipynb  custom_activations.py  data_postprocessing.ipynb  expt1.ipynb  expt1.py  expt1_analysis.ipynb  expt2.ipynb  expt2.py  expt2_analysis.ipynb  expt3.ipynb  expt3.py  expt3_analysis.ipynb  process_X_data.ipynb  process_y_data.ipynb  pyproject.toml
